# AndroidDemo

./: .gitignore  README.md
Gesture/app/: build.gradle  proguard-rules.pro
Gesture/app/src/androidTest/java/me/sheldon/gesture/: ExampleInstrumentedTest.java
Gesture/app/src/main/: AndroidManifest.xml
Gesture/app/src/main/java/me/sheldon/gesture/: MainActivity.java
Gesture/app/src/main/res/layout/: activity_main.xml
Gesture/app/src/test/java/me/sheldon/gesture/: ExampleUnitTest.java
JNIDemo/app/: build.gradle
JNIDemo/app/src/androidTest/java/com/example/sheldonluo/jnidemo/: ExampleInstrumentedTest.java
JNIDemo/app/src/main/: AndroidManifest.xml
JNIDemo/app/src/main/java/com/example/sheldonluo/jnidemo/: MainActivity.java  NativeMethod.java
JNIDemo/app/src/main/java/jni/: Android.mk  Application.mk  NativeMethod.c  NativeMethod.h
JNIDemo/app/src/main/java/jni/src/: CMakeLists.txt  gif_util.cpp  gif_util.h  main.c
JNIDemo/app/src/main/res/layout/: activity_main.xml
JNIDemo/app/src/test/java/com/example/sheldonluo/jnidemo/: ExampleUnitTest.java
JNIDemo/gradle/wrapper/: gradle-wrapper.properties
